# complaints

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  complaints-manager.sh  complaints_app.py  config.py  docker-compose.yml  init-letsencrypt.sh  pyproject.toml  requirements.txt  requirments.txt  wsgi.py
app/: __init__.py  forms.py  models.py
app/static/css/: base.css  dashboard.css  index.css  login.css
app/templates/: base.html  index.html  track.html
app/templates/admin/: dashboard.html  login.html
app/templates/errors/: 401.html  403.html  404.html  429.html  500.html  base_error.html
app/views/: admin.py  errors.py  public.py  test.py
instance/: db.sqlite3
nginx/: Dockerfile  app-http.conf.template  app.conf.template
scripts/: deploy_app.sh  uninstall_app.sh  update_app.sh
